--- a/drive/src/components/categories/categories.scss
+++ b/drive/src/components/categories/categories.scss
@@ -54,8 +54,9 @@
 
     .tooltip {
         display: block;
-        left: 0px;
-        top: 125px;
+        left: 20px;
+        top: -70px;
+        box-shadow: 0px 0px 7px 2px grey;
         position: absolute;
         max-width: 400px;
         padding: 10px;
@@ -67,7 +68,7 @@
             white-space: normal;
             word-wrap: break-word;
             overflow-wrap: break-word;
-            font-size:13px;
+            font-size: 13px;
         }
     }
 }
