--- a/drive/src/components/modal/modal.scss
+++ b/drive/src/components/modal/modal.scss
@@ -12,6 +12,10 @@
     align-items: center;
     z-index: 1000;
 
+    .m_close {
+        display: none;
+    }
+
     .modal-body {
         position: relative;
         //background-color: var(--primary-color);
@@ -22,12 +26,30 @@
         width: 50%;
         height: 40%;
 
-        .close {
+        .d_close {
             position: absolute;
             top: 3px;
             right: 3px;
         }
 
 
+    }
+}
+
+
+@media only screen and (max-width:600px) {
+    .modal {
+        .m_close {
+            display: block;
+            position: absolute;
+            top: 10px;
+            right:10px;
+        }
+
+        .modal-body {
+            .d_close {
+                display: none;
+            }
+        }
     }
 }
