--- a/drive/src/components/upload/upload.scss
+++ b/drive/src/components/upload/upload.scss
@@ -1,6 +1,6 @@
 .upload {
-    height: 80%;
-    width: 80%;
+    height: 400px;
+    width: 450px;
     border-radius: 5px;
     border-style: dashed;
     border-width: 2px;
@@ -44,4 +44,11 @@
     border-radius: 5px;
     height: fit-content;
     box-shadow: 0px 0px 4px 2px rgba(128, 128, 128, 0.838);
+}
+
+@media only screen and (max-width:600px) {
+    .upload {
+        height: 250px;
+        width: 320px;
+    }
 }
